# FINM-32600-W23

./: .gitignore  README.md
Assignment/Hyun_Kiwan_Assignment0/: Add.cpp  Add.h  CMakeLists.txt  main.cpp
Assignment/Hyun_Kiwan_Assignment1/: CMakeLists.txt  main.cpp
Assignment/Hyun_Kiwan_Assignment2/: CMakeLists.txt  Currency.cpp  Currency.h  FX.cpp  FX.h  main.cpp
Assignment/Hyun_Kiwan_Assignment3/: CMakeLists.txt  Currency.cpp  Currency.h  CurrencyFactory.cpp  CurrencyFactory.h  main.cpp
Assignment/Hyun_Kiwan_Assignment4/: CMakeLists.txt  Equity.cpp  EuropeanCall.h  EuropeanPut.cpp  main.cpp
Assignment/Hyun_Kiwan_Assignment5/: CMakeLists.txt  Equity.h  EuropeanCall.cpp  EuropeanCall.h  EuropeanPut.cpp  EuropeanPut.h  MCPricer.cpp  MCPricer.h  Normal_Distribution.h  Option.cpp  Option.h  main.cpp
CLion/: CMakeLists.txt
FINM-32600-W1/: FINM-32600-W1.sln
FINM-32600-W1/FINM-32600-W1/: FINM-32600-W1.cpp  FINM-32600-W1.vcxproj  FINM-32600-W1.vcxproj.filters
FINM-32600-W1/FINM-32600-W1/x64/Debug/: FINM-32600-W1.exe.recipe  FINM-32600-W1.ilk  vc143.idb
FINM-32600-W1/FINM-32600-W1/x64/Debug/FINM-32600-W1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FINM-32600-W1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Final/Hyun_Kiwan_FINM32600_Final_Q2/: CMakeLists.txt  Currency.h  CurrencyFactory.h  Equity.cpp  EuropeanCall.h  EuropeanPut.cpp  MCPricer.cpp  Normal_Distribution.cpp  Option.h
Lectures/FINM32600_W23_Week1/: CMakeLists.txt  FINM32600_W23_Week1.cpp  FINM32600_W23_Week1.h
Lectures/FINM32600_W23_Week2/: CMakeLists.txt  FINM32600_W23_Week2.cpp  FINM32600_W23_Week2.h  main.cpp
Lectures/FINM32600_W23_Week3/: CMakeLists.txt  Circle.cpp  Circle.h  Currency.cpp  Currency.h  main.cpp
Lectures/FINM32600_W23_Week4/: CMakeLists.txt  Currency.cpp  Currency.h  CurrencyFactory.cpp  CurrencyFactory.h
Lectures/FINM32600_W23_Week9/BinomialTree/: BinomialTree.cpp  BinomialTree.h
Lectures/FINM32600_W23_Week9/StaticMembers/: Counter.cpp  Counter.h  Source.cpp
Midterm/Hyun_Kiwan_FINM32600_Midterm_Q1/: CMakeLists.txt  Currency.cpp  Currency.h  CurrencyFactory.cpp  CurrencyFactory.h  main.cpp
Midterm/Hyun_Kiwan_FINM32600_Midterm_Q2/: FindNearestPrime.cpp  FooBar.h  IsPrime.cpp  PrintFooBar.cpp  PrintFooBar.h  PrintNearestPrime.cpp  PrintNearestPrime.h  main.cpp
Midterm/Q2/: CMakeLists.txt  FindNearestPrime.h  FooBar.cpp  IsPrime.h  PrintFooBar.cpp  PrintNearestPrime.cpp
